added certification links and more css styling

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 node_modules/
+
+
+Hello, I'm Bwacha!
+
+In the world of data and discovery, I'm on a journey of constant exploration. With over two years of experience in the Testing Domain and a Bachelor's degree in Chemical Engineering, I've developed a passion for Data Science that knows no bounds.
+
+My toolbox is filled with Python, and I find my playground on platforms like Google Colab and Kaggle. I'm a firm believer in the magic of open-source resources like Forage, YouTube, DataCamp, and more. These tools are not just gateways to knowledge but bridges to innovation.
+
+Beyond data, I enjoy the art of mentoring and crafting technical articles. I pay it forward on Upwork, sharing insights and concepts in the realms of social, programming, and Machine Learning. My creativity extends beyond code – I'm also an artist with a deep love for Hollywood and Anime.
+
+My journey is a perpetual quest for growth and learning. I look ahead with excitement, ready to embrace the limitless possibilities that Data Science and Machine Learning hold.
+
+Remember, in the words of a great American president, Barack Obama, "We are the ones we've been waiting for. We are the change that we seek." Together, let's seek knowledge, embrace change, and make an impact.
+
+Welcome to my world of data and dreams.
+
